# as400-gemini-bridge

./: .env.examples  .gitignore  ANALYZE.CLLE  ANALYZE.CMD  README.md  analyze.py  create_gemini.sql  create_sales.sql  create_table.sql  insert_sales.sql  pyproject.toml  run_analyze.sh
sample_apibridge_result/: as400-gemini-bridge-result.json
